updating with redis
